# TaskFlow-Pro

./: .env.example  .gitignore  .pre-commit-config.yaml  API.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPER.md  LICENSE  RAILWAY_DEPLOY.md  README.md  RENDER_DEPLOY.md  SECURITY.md  TECHNICAL.md  TROUBLESHOOTING.md  build.sh  config.py  db_init.py  fix_database.py  fix_migrations.py  pyproject.toml  requirements-dev.txt  requirements.txt  reset_db.py  run.py  setup_sample_data.py  test_database.py  wsgi.py
.github/workflows/: ci.yml
api/: index.py
app/: __init__.py  models.py  utils.py
app/api/: routes.py
app/auth/: forms.py  routes.py
app/errors/: handlers.py
app/main/: __init__.py  forms.py  routes.py
app/static/: styles.css
app/templates/auth/: login.html  register.html  user_edit.html  users.html
app/templates/docs/: landing.html
app/templates/errors/: 403.html  404.html  500.html
app/templates/main/: assign_task.html  assigned_tasks.html  base.html  create_project.html  create_task.html  department_form.html  departments.html  index.html  project.html  project_form.html  project_reports.html  projects.html  risk_form.html  risks.html  settings.html  task_form.html  time_entry_form.html  time_reports.html  user.html
docs/: admin_guide.md  installation_guide.md  user_guide.md
migrations/: env.py
project_management/: config.py  requirements.txt  run.py
project_management/app/: __init__.py  models.py
project_management/app/auth/: forms.py  routes.py
project_management/app/main/: routes.py
